2010-10-12  Alok priyadarshi  <alokp@chromium.org>

        Reviewed by Kenneth Russell.

        Remove support for ANGLE SH_VERSION <= 100
        https://bugs.webkit.org/show_bug.cgi?id=47307

        * src/WebGraphicsContext3DDefaultImpl.cpp:
        (WebKit::WebGraphicsContext3DDefaultImpl::angleCreateCompilers):
        (WebKit::WebGraphicsContext3DDefaultImpl::angleValidateShaderSource):

2010-10-12  James Robinson  <jamesr@chromium.org>

        Unreviewed chromium compile fixes for http://trac.webkit.org/changeset/69619.

        * src/GraphicsContext3DChromium.cpp:
        (WebCore::GraphicsContext3D::create):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setIsAcceleratedCompositingActive):
        * src/WebViewImpl.h:

2010-10-12  Jian Li  <jianli@chromium.org>

        Unreviewed. Bump up revision in order to pick up fix.

        * DEPS:

2010-10-12  Jian Li  <jianli@chromium.org>

        Unreview. Build fix for chromium.

        * public/WebBlobRegistry.h:

2010-10-12  Jian Li  <jianli@chromium.org>

        Reviewed by Darin Fisher.

        [chromium] Update WebBlobData to adapt to BlobData change in terms of
        handling string data item.
        https://bugs.webkit.org/show_bug.cgi?id=47423

        Also remove unneeded methods in WebBlobData. WebBlobStorageData.* are
        also removed since they're not longer needed.

        * WebKit.gyp:
        * public/WebBlobData.h:
        * public/WebBlobRegistry.h:
        * public/WebBlobStorageData.h: Removed.
        * public/WebThreadSafeData.h: Added.
        * src/WebBlobData.cpp:
        * src/WebBlobStorageData.cpp: Removed.
        * src/WebThreadSafeData.cpp: Added.

2010-10-12  Kavita Kanetkar  <kkanetkar@chromium.org>

        Reviewed by Dumitru Daniliuc.

        [FileSystem] Add ability to pass a bool to create or not create root path while opening filesystem.
        https://bugs.webkit.org/show_bug.cgi?id=47519

        * public/WebCommonWorkerClient.h: